@@ -1,3 +1,6 @@
+2005-04-28  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* files/msgfile.cc, shapes/items.cc: strip CR's from end of line
+
 2005-04-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* usecode/ucinternal.*: reset all statics when loading
 
